--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
 <h2>  <a href="mailto:taron.avetisyan2004@mail.ru"><span class="fa fa-envelope" aria-hidden="true"></span> taron.avetisyan2004@mail.ru</a>
 <a href="tel: +37498984322">  <span class="fa fa-phone" aria-hidden="true"></span>  +37498984322</a>
 <a href="#"> <span class="fa fa-map-marker" aria-hidden="true"></span> city Martuni Komitas 41</a></h2>
-<a href="https://www.facebook.com/taron.avetisyan.560"><span class="fa fa-facebook-official" aria-hidden="true"></span></a>
-<a href="https://www.instagram.com/_avetisyan7/"> <span class="fa fa-instagram" aria-hidden="true"></span></a>
+<nav><a href="https://www.facebook.com/taron.avetisyan.560"> <img src="/images/facebook.png"></a>
+<a href="https://www.instagram.com/_avetisyan7/"> <img src="/images/instagram.png"></a></nav>
+<div class="clear"></div>
 </header>
-<div>
+<div class="article"><a href="/js.html">Java Script</a>
+    <a href="/html.html">HTML</a>
+    <a href="/css.html">CSS</a>
 </div>
 </body>
 </html>
